--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "mkt-app",
   "version": "0.1.0",
+  "homepage": "https://conquerorzzz.github.io/mktapp",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -21,8 +23,8 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
-    "@types/node": "20.10.0",
     "@types/lodash": "4.14.202",
+    "@types/node": "20.10.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -45,6 +47,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^6.1.1",
     "jest": "^27.0.5",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
