--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mkt-app",
+  "name": "mktapp",
   "version": "0.1.0",
-  "homepage": "https://conquerorzzz.github.io/mktapp",
+  "homepage": "https://conquerorzzz.github.io/mktapp/",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,12 +12,15 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@tonconnect/sdk": "^3.0.5",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "element-plus": "^2.8.4",
     "ethers": "^6.13.3",
     "pinia": "^2.2.4",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.14.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
