--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve --host test.ave.ai",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
@@ -15,9 +16,11 @@
     "@tonconnect/sdk": "^3.0.5",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
-    "element-plus": "^2.8.4",
+    "element-plus": "^2.8.3",
     "ethers": "^6.13.3",
+    "html2canvas": "^1.4.1",
     "pinia": "^2.2.4",
+    "qrcode": "^1.5.4",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-i18n": "^9.14.1",
